# eln_copilot

./: LICENSE  README.md  app.py  components.py  heatmap_visualizer.py  llm_parser.py  mockup_data.json  mockup_data.py  mockup_input.md  models.py  pyproject.toml  workflows.json
workflows/: 3_way_optimization.md  do_nothing.md  optimization.md
