[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.2"  # Add the pyperclip dependency

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
